added a way to share the Url link 🤗

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,5 +50,6 @@
         <item> Ussd </item>
         <item> Internet </item>
     </string-array>
+    <string name="share_transaction">Transaction Details %s </string>
 
 </resources>
