--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,6 +73,7 @@
         <item> Internet </item>
     </string-array>
     <string name="share_transaction">This is a Transaction from %s, follow the link to complete this Transaction  %s </string>
+    <string name="connect_public_key">test_pk_HCHzGIPFDjru1cb3ZQUR</string>
 
     <string-array name="shipment_method">
         <item> Order is being Shiped </item>
