--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Escrow</string>
+    <string name="app_name">Escrow Africa</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="position" translatable="false">position</string>
     <string name="transaction_title">Transaction Title <font color='#FF0000'> *</font></string>
